DatePicker: set z-index to the correct value

--- a/components/datepicker/theme.css
+++ b/components/datepicker/theme.css
@@ -344,7 +344,7 @@
   left: 0;
   margin-top: 16px;
   position: absolute;
-  z-index: 1;
+  z-index: 400;
 
   &::after {
     border: solid var(--color-neutral);
@@ -357,7 +357,7 @@
     left: 10px;
     background: var(--color-white);
     transform: rotate(45deg);
-    z-index: 2;
+    z-index: 401;
   }
 }
 
